--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ img {
 }
 
 a {
+    color: rgba(0, 0, 0, .75);
     padding: 0;
     margin: 0;
     text-decoration: none;
@@ -74,8 +75,8 @@ a {
 
 a:hover,
 a:focus {
+    color: rgb(22, 212, 167);
     text-decoration: none;
-    color: #01b2fe;
 }
 
 ::-moz-selection {
@@ -92,20 +93,6 @@ a:focus {
 
 .centered {
     text-align: center
-}
-
-.contain-i-e-s, .fa-circle-thin, .text-i-e-s {
-    height: 100px;
-    width: 100px;
-}
-
-.contain-i-e-s {
-    position: relative;
-}
-
-.text-i-e-s {
-    text-align: center;
-    position: absolute;
 }
 
 /*	################################################################
@@ -262,7 +249,8 @@ a:focus {
 }
 
 #service i {
-    color: #1481BA;
+    /*color: #1481BA;*/
+    color: rgb(22, 212, 167);
     font-size: 60px;
     padding: 15px;
 }
@@ -431,7 +419,8 @@ a:focus {
 }
 
 #footerwrap i:hover {
-    color: #1481BA
+    /*color: #1481BA*/
+    color: rgb(22, 212, 167);
 }
 
 /*	################################################################
